--- a/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
+++ b/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
@@ -186,7 +186,7 @@
                         <li class="nav-item @(isConrseManager ? "active" : "")">
                             <a data-bs-toggle="collapse" href="#collapseConrseManager" aria-expanded="false">
                                 <i class="fas fa-graduation-cap"></i>
-                                <p>Conrse Manager</p>
+                                <p>Course Manager</p>
                                 <span class="caret"></span>
                             </a>
                             <div class="collapse" id="collapseConrseManager">
