--- a/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
+++ b/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
@@ -248,7 +248,7 @@
                                    href="#"
                                    aria-expanded="false">
                                     <div class="avatar-sm">
-                                        <img src="@Url.Content("~/AdminAssets/img/profile.jpg")"
+                                        <img src="~/images/fav_icon.png"
                                              alt="..."
                                              class="avatar-img rounded-circle" />
                                     </div>
@@ -259,19 +259,6 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-user animated fadeIn">
                                     <div class="dropdown-user-scroll scrollbar-outer">
-                                    <li>
-                                        <div class="user-box">
-                                            <div class="avatar-lg">
-                                                <img src="@Url.Content("~/AdminAssets/img/profile.jpg")"
-                                                     alt="image profile"
-                                                     class="avatar-img rounded" />
-                                            </div>
-                                            <div class="u-text">
-                                                <h4>Admin</h4>
-                                                <p class="text-muted">Admin@example.com</p>
-                                            </div>
-                                        </div>
-                                    </li>
                                         @if (isAuthenticated)
                                         {
                                         <li>
