--- a/final-project-fe/Pages/Mentor/Shared/_MentorLayout2.cshtml
+++ b/final-project-fe/Pages/Mentor/Shared/_MentorLayout2.cshtml
@@ -200,27 +200,15 @@
                                     <div class="profile-info">
                                         <div class="info">
                                             <div class="image">
-                                                <img src=@Url.Content("~/MentorAssets/images/profile/profile-image.png") alt="" />
+                                                <img src="~/images/fav_icon.png" alt="">
                                             </div>
                                             <div>
-                                                <h6 class="fw-500">Adam Joe</h6>
                                                 <p>Mentor</p>
                                             </div>
                                         </div>
                                     </div>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profile">
-                                    <li>
-                                        <div class="author-info flex items-center !p-1">
-                                            <div class="image">
-                                                <img src=@Url.Content("~/MentorAssets/images/profile/profile-image.png") alt="image">
-                                            </div>
-                                            <div class="content">
-                                                <h4 class="text-sm">Adam Joe</h4>
-                                                <a class="text-black/40 dark:text-white/40 hover:text-black dark:hover:text-white text-xs" href="#">Email@gmail.com</a>
-                                            </div>
-                                        </div>
-                                    </li>
                                     <li class="divider"></li>
                                     <li>
                                         <a asp-page="/Logout"> <i class="lni lni-exit"></i> Logout </a>
