--- a/final-project-fe/Pages/Admin/PostManager/ListDeleted.cshtml
+++ b/final-project-fe/Pages/Admin/PostManager/ListDeleted.cshtml
@@ -109,7 +109,7 @@
                         <div class="demo">
                             <ul class="pagination pg-primary">
                                 <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")">
-                                    <a class="page-link" asp-page="Index" asp-route-pageNumber="@(Model.CurrentPage - 1)" aria-label="Previous">
+                                    <a class="page-link" asp-page="ListDeleted" asp-route-pageNumber="@(Model.CurrentPage - 1)" aria-label="Previous">
                                         <span aria-hidden="true">&laquo;</span>
                                         <span class="sr-only">Previous</span>
                                     </a>
@@ -118,12 +118,12 @@
                                 @for (int i = 1; i <= Model.Posts.TotalPages; i++)
                                 {
                                     <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                                        <a class="page-link" asp-page="Index" asp-route-pageNumber="@i">@i</a>
+                                        <a class="page-link" asp-page="ListDeleted" asp-route-pageNumber="@i">@i</a>
                                     </li>
                                 }
 
                                 <li class="page-item @(Model.CurrentPage == Model.Posts.TotalPages ? "disabled" : "")">
-                                    <a class="page-link" asp-page="Index" asp-route-pageNumber="@(Model.CurrentPage + 1)" aria-label="Next">
+                                    <a class="page-link" asp-page="ListDeleted" asp-route-pageNumber="@(Model.CurrentPage + 1)" aria-label="Next">
                                         <span aria-hidden="true">&raquo;</span>
                                         <span class="sr-only">Next</span>
                                     </a>
