--- a/final-project-fe/Pages/WorkshopDetail.cshtml
+++ b/final-project-fe/Pages/WorkshopDetail.cshtml
@@ -16,6 +16,7 @@
 </head>
 <body>
     <partial name="_ConfirmDialog" />
+    @Html.Partial("_Notification")
     @if (Model.Workshop == null)
     {
         <div class="container mt-5">
