--- a/final-project-fe/Pages/Mentor/MentorPage/Dashboard.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/Dashboard.cshtml
@@ -66,7 +66,7 @@
                     </div>
                     <div class="content">
                         <h6 class="mb-10">Monthly Income</h6>
-                        <h3 class="text-bold mb-10">@Model.TotalIncome.ToString("N2") Point</h3>
+                        <h3 class="text-bold mb-10">@Model.TotalIncome.ToString("N0") VNĐ </h3>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="content">
                         <h6 class="mb-10">Monthly Withdrawal</h6>
-                        <h3 class="text-bold mb-10">@Model.Withdraw.Items.Sum(w => w.Points) Point</h3>
+                        <h3 class="text-bold mb-10">@((Model.Withdraw.Items.Sum(w => w.Points) * 1000).ToString("N0")) VNĐ</h3>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <div class="title d-flex flex-wrap justify-content-between">
                         <div class="left">
                             <h6 class="text-medium mb-10">Yearly Income</h6>
-                            <h3 class="text-bold">@Model.Payments.Sum().ToString("N2") Point</h3>
+                            <h3 class="text-bold">@Model.Payments.Sum().ToString("N0") VNĐ</h3>
                         </div>
                         <div class="right">
                             <div class="select-style-1">
@@ -246,7 +246,7 @@
                     titleColor: '#000000',
                     callbacks: {
                         label: function (context) {
-                            return context.parsed.y.toFixed(2) + ' point';
+                            return context.parsed.y.toFixed(2) + ' VNĐ';
                         }
                     },
                     intersect: false,
@@ -285,7 +285,7 @@
                         color: '#000000',
                         padding: 35,
                         callback: function (value) {
-                            return value + ' Point';
+                            return value + ' VNĐ';
                         }
                     },
                 },
